# jpype_java_extension_example

./: README.md  build_java_jar.py  main.py  pyproject.toml  requirements.txt
java-src/org/orekit/custom/: EventCounter.java
java-src/org/orekit/propagation/events/: NewElevationDetector.java
scripts/: build_java_jar.py
src/MyOrekitProject/: __init__.py  main.py
test/: EventDetectorTest.py
